# python-poetry-template

./: README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
